[package]
name = "butterfly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = "1.25.0"
